# synth_test

./: Cargo.toml  application.kra  application.kra-autosave.kra  application.kra~
src/: error.rs  lib.rs  main.rs  math.rs
src/audio/: error.rs  graph.rs  mod.rs
src/devices/: amplifier.rs  oscillator.rs
src/gui/: error.rs  mod.rs  synthesizer.rs
src/gui/components/: amplifier.rs  mod.rs  oscillator.rs
src/gui/widgets/: knob.rs  mod.rs
src/gui/widgets/audio_widgets/: mod.rs
src/gui/widgets/audio_widgets/core/: knob_angle_range.rs  math.rs  mod.rs  modulation_range.rs  normal.rs  normal_param.rs  offset.rs  range.rs
src/gui/widgets/audio_widgets/graphics/: knob.rs  mod.rs
src/gui/widgets/audio_widgets/graphics/text_marks/: horizontal.rs  mod.rs  radial.rs
src/gui/widgets/audio_widgets/graphics/tick_marks/: mod.rs
src/gui/widgets/audio_widgets/native/: knob.rs  mod.rs  text_marks.rs  tick_marks.rs
src/gui/widgets/audio_widgets/style/: default_colors.rs  knob.rs  mod.rs  text_marks.rs  tick_marks.rs
src/gui/widgets/core/: knob_angle_range.rs  math.rs  mod.rs  normal.rs  normal_param.rs  range.rs  slider_status.rs
src/synthesis/: mod.rs  waveforms.rs  wavetable.rs
src/ui/: mod.rs
