[package]
name = "wavetable_synthesizer"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = ["advanced", "canvas", "lazy"] } #0.13.0-dev
#iced_wgpu = { git = "https://github.com/iced-rs/iced.git" }
rodio = "0.19"
strum_macros = "0.26.4"
cpal = { path="../cpal" } #for fixing breaking changes with web-sys patch